# AuroraProjects

./: .gitignore  CLAUDE.md  README.md
AntivirusDemo/: .gitignore  .gitlab-ci.yml  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.BSD-3-Clause.md  README.md  README.ru.md  examples-manifest.xml  ru.auroraos.AntivirusDemo.desktop
AntivirusDemo/gitlab-ci/: .jobs_PSDK5.gitlab-ci.yml  .jobs_cpp_check.gitlab-ci.yml  .jobs_spell_checking.gitlab-ci.yml  archive.sh  project-words.txt  suppressions.txt
AntivirusDemo/qml/: AntivirusDemo.qml
AntivirusDemo/qml/cover/: DefaultCoverPage.qml
AntivirusDemo/qml/pages/: AboutPage.qml  LogViewPage.qml  ScanPage.qml  SelectFilePage.qml
AntivirusDemo/qml/utils/: Utils.js
AntivirusDemo/rpm/: ru.auroraos.AntivirusDemo.spec
AntivirusDemo/src/: main.cpp
AntivirusDemo/src/av/: avclient.cpp  avclient.h  avscanner.cpp  avscanner.h  avserver.cpp  avserver.h
AntivirusDemo/src/logger/: logdata.cpp  logdata.h  logger.cpp  logger.h  loggermodel.cpp  loggermodel.h
AntivirusDemo/translations/: AntivirusDemo-ru.ts  AntivirusDemo.ts
Converter/: CMakeLists.txt  ru.template.Converter.desktop
Converter/qml/: Converter.qml
Converter/qml/cover/: DefaultCoverPage.qml
Converter/qml/pages/: AboutPage.qml  MainPage.qml
Converter/rpm/: ru.template.Converter.changes.in  ru.template.Converter.changes.run.in  ru.template.Converter.spec
Converter/src/: main.cpp
Converter/translations/: Converter-ru.ts  Converter.ts
Notes/: CMakeLists.txt  ru.template.Notes.desktop
Notes/qml/cover/: DefaultCoverPage.qml
Notes/qml/pages/: MainPage.qml  NewNotePage.qml  NotePage.qml
Notes/rpm/: ru.template.Notes.changes.in  ru.template.Notes.changes.run.in  ru.template.Notes.spec
Notes/src/: main.cpp  notesmodel.cpp  notesmodel.h
Notes/translations/: Notes-ru.ts  Notes.ts
Processor/: CMakeLists.txt  ru.template.Processor.desktop
Processor/qml/cover/: DefaultCoverPage.qml
Processor/qml/pages/: MainPage.qml
Processor/rpm/: ru.template.Processor.changes.in  ru.template.Processor.changes.run.in  ru.template.Processor.spec
Processor/src/: imageprocessor.cpp  imageprocessor.h  main.cpp  processingworker.cpp  processingworker.h  resultimageprovider.h
Processor/translations/: Processor-ru.ts  Processor.ts
